<?xml version="1.0" encoding="utf-8"?>
<!-- note: alt+shift+left/right to switch between xml and layout -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/security_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">  <!-- was fill_parent -->
    <!-- android:weightSum="1" -->

    <ImageView
        android:id="@+id/SecurityImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/secimg"
        android:src="@drawable/sec_unknown" />

    <TextView
        android:id="@+id/securityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/securitySubtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:text="@string/additional_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/ArmStay"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/borderbtn"
        android:onClick="securityArmStayButtonClick"
        android:text="@string/arm_stay"
        android:textSize="28sp" />

    <Button
        android:id="@+id/ArmAway"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/borderbtn"
        android:onClick="securityArmAwayButtonClick"
        android:text="@string/arm_away"
        android:textSize="28sp" />

    <Button
        android:id="@+id/Disarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:background="@drawable/borderbtn"
        android:onClick="securityDisarmButtonClick"
        android:text="@string/disarm"
        android:textSize="28sp" />

</LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>