<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_event_contacts"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/setupAlarmContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacts_to_notify"
            android:inputType="textMultiLine|textNoSuggestions" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_server_settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/setupEmlServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <EditText
                android:id="@+id/setupEmlPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:autofillHints="email password" />

            <Spinner
                android:id="@+id/setupEmlMode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="?android:attr/listDivider" />

         <Button
             android:id="@+id/emailTestBtn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Email Test"
             android:textSize="12sp" />

    </LinearLayout>

</ScrollView>